<resources>
    <string name="app_name">Patm</string>

    <string name="nombre_emp">Nombre del empleado</string>
    <string name="apepat_emp">Apellido paterno</string>
    <string name="apemat_emp">Apellido materno</string>
    <string name="email_emp">Correo electronico</string>

    <string-array name="spinner_data">
        <item>Puesto chido</item>
        <item>Puesto maso</item>
        <item>Puesto feo</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_about">About</string>
    <string name="name_developer">Marco Antonio Vazquez Ruelas</string>
    <string name="tecno">http://www.itc.mx/</string>
    <string name="phone_developer">4613424004</string>
    <string name="email_developer">marcovazquez77@hotmail.com</string>
    <string name="LoginUser">example@mail.com</string>
</resources>
