<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1">

        <TextView
            android:id="@+id/txt_developer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_developer"
            android:gravity="center"
            android:height="50dp" />

        <TextView
            android:id="@+id/txt_tecno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tecno"
            android:height="50dp"/>

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_developer"
            android:gravity="center"
            android:height="50dp"/>

        <TextView
            android:id="@+id/txt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/phone_developer"
            android:height="50dp"/>

    </TableLayout>
</ScrollView>